classDiagram
    direction LR

    namespace Result {
        class NetworkResult~T~ {
            <<sealed>>
            +isSuccess: Boolean
            +isFailure: Boolean
            +map(transform) NetworkResult~R~
            +flatMap(transform) NetworkResult~R~
            +fold(onSuccess, onFailure) R
            +onSuccess(action) NetworkResult~T~
            +onFailure(action) NetworkResult~T~
            +getOrNull() T?
            +errorOrNull() NetworkError?
        }

        class Success~T~ {
            +data: T
            +metadata: ResponseMetadata
        }

        class Failure {
            +error: NetworkError
        }

        class ResponseMetadata {
            +statusCode: Int
            +headers: Map
            +durationMs: Long
            +requestId: String?
            +attemptCount: Int
        }
    }

    namespace ErrorModel {
        class NetworkError {
            <<sealed>>
            +message: String
            +diagnostic: Diagnostic?
            +isRetryable: Boolean
        }

        class Diagnostic {
            +description: String
            +cause: Throwable?
            +metadata: Map
        }
    }

    namespace TransportErrors {
        class Connectivity { +isRetryable = true }
        class Timeout { +isRetryable = true }
        class Cancelled { +isRetryable = false }
    }

    namespace HttpErrors {
        class Authentication { +isRetryable = false }
        class Authorization { +isRetryable = false }
        class ClientError { +statusCode: Int }
        class ServerError { +statusCode: Int; isRetryable = true }
    }

    namespace ProcessingErrors {
        class Serialization { +isRetryable = false }
        class ResponseValidation { +reason: String }
        class Unknown { +isRetryable = false }
    }

    NetworkResult <|-- Success
    NetworkResult <|-- Failure
    Success --> ResponseMetadata
    Failure --> NetworkError

    NetworkError <|-- Connectivity
    NetworkError <|-- Timeout
    NetworkError <|-- Cancelled
    NetworkError <|-- Authentication
    NetworkError <|-- Authorization
    NetworkError <|-- ClientError
    NetworkError <|-- ServerError
    NetworkError <|-- Serialization
    NetworkError <|-- ResponseValidation
    NetworkError <|-- Unknown
    NetworkError --> Diagnostic
